# spl_run

./: .gitignore  CMakeLists.txt  README.md  a.bc  auto.sh  core.21918  core.22002  test.json  test.spl  test2.spl
include/: AbstractSyntaxTree.h  IRGenerator.h  TargetGenerator.h  parser.h
include/generator/: IRGenerator.h  TargetGenerator.h
lib/: libcjson.so.1.7.15
parser/: LexicalAnalysis.l  SyntaxAnalysis.y
src/: AbstractSyntaxTree.cc  TargetGenerator.cc  Visualization.cc  demo.cc  demo.cpp  lexer.cpp  main.cc  parser.cpp
src/generator/: IRGenerator.cc  TargetGenerator.cc
src/parser/: LexicalAnalysis.l  SyntaxAnalysis.y  lexer.cpp  parser.cpp  parser.output
test/: ArrayTypeTest.spl  BranchTest.spl  CalculateTest.spl  DataTypeTest.spl  ForTest.spl  Function_add.spl  GotoTest.spl  RecursiveFunTest.spl  ReferenceParameterTest.spl  SortTest.spl  run_test.sh
